# LuaXEMySQL

./: CMakeLists.txt  README.md  dll.def  library.cpp
Dependencies/Include/: ntexapi.h  ntioapi.h  ntldr.h  ntmmapi.h  ntpebteb.h  ntpnpapi.h  ntpsapi.h  ntrtl.h  phnt.h  phnt_windows.h
Dependencies/Include/jdbc/cppconn/: version_info.h
Dependencies/Include/mysqlx/: version_info.h
